# Hussar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_example.py
src/hussar/: __init__.py  agent.py
tests/: test_simple_workflow.py
